force-app/main/default/objects/Registration_Request__c/Registration_Request__c.object-meta.xml
<CustomObject>
    <description>Queue object for student registration requests from Gesher intake system</description>
    <label>Registration Request</label>
    <nameField>
        <displayFormat>REG-{0000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>