force-app/main/default/objects/Registration_Request__c/fields/ADHD__c.field-meta.xml
<CustomField>
    <fullName>ADHD__c</fullName>
    <label>ADHD</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>