force-app/main/default/objects/Registration_Request__c/fields/ADHD_Treatment__c.field-meta.xml
<CustomField>
    <fullName>ADHD_Treatment__c</fullName>
    <label>טיפול בהפרעת קשב</label>
    <length>255</length>
    <type>Text</type>
</CustomField>