force-app/main/default/objects/Registration_Request__c/fields/Afternoon_Activities__c.field-meta.xml
<CustomField>
    <fullName>Afternoon_Activities__c</fullName>
    <label>פעילויות בשעות אחה"צ</label>
    <type>Text</type>
    <length>255</length>
</CustomField>