force-app/main/default/objects/Registration_Request__c/fields/Assessment_Details__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Details__c</fullName>
    <label>Assessment Details</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>