force-app/main/default/objects/Registration_Request__c/fields/Assessment_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Assessment_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment File Uploaded</label>
    <description>Indicates whether an assessment file has been uploaded for this registration request</description>
    <type>Checkbox</type>
</CustomField>