force-app/main/default/objects/Registration_Request__c/fields/Assessment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Needed__c</fullName>
    <label>יש צורך באבחון</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>