force-app/main/default/objects/Registration_Request__c/fields/Behavioral_Issues__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Issues__c</fullName>
    <label>בעיות התנהגות</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
            <value>
                <fullName>לא ידוע</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>