force-app/main/default/objects/Registration_Request__c/fields/Behavioral_Issues_Details__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Issues_Details__c</fullName>
    <description>Detailed description of behavioral issues when present</description>
    <label>Behavioral Issues Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>