force-app/main/default/objects/Registration_Request__c/fields/Can_Handle_Program__c.field-meta.xml
<CustomField>
    <fullName>Can_Handle_Program__c</fullName>
    <label>יכולת עמידה בעומס המסגרת</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>