force-app/main/default/objects/Registration_Request__c/fields/Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date__c</fullName>
    <label>תאריך הסכמה</label>
    <type>DateTime</type>
</CustomField>