force-app/main/default/objects/Registration_Request__c/fields/Consent_HTML__c.field-meta.xml
<CustomField>
    <fullName>Consent_HTML__c</fullName>
    <label>טופס ויתור סודיות מלא</label>
    <length>131070</length>
    <type>Html</type>
</CustomField>