force-app/main/default/objects/Registration_Request__c/fields/Consent_Method__c.field-meta.xml
<CustomField>
    <fullName>Consent_Method__c</fullName>
    <description>Method of obtaining parental consent - Digital (online signature) or Manual (paper form)</description>
    <label>אופן הסכמה</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
                <default>true</default>
                <label>דיגיטלי</label>
            </value>
            <value>
                <fullName>Manual (Paper)</fullName>
                <label>ידני (נייר)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>