force-app/main/default/objects/Registration_Request__c/fields/Consentform_signed__c.field-meta.xml
<CustomField>
    <fullName>Consentform_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the consent form has been received (either digitally signed by parents or uploaded by school rep)</description>
    <inlineHelpText>סימון כי טופס הסכמה התקבל</inlineHelpText>
    <label>טופס הסכמה התקבל</label>
    <type>Checkbox</type>
</CustomField>