force-app/main/default/objects/Registration_Request__c/fields/Counselor_Email__c.field-meta.xml
<CustomField>
    <fullName>Counselor_Email__c</fullName>
    <label>אימייל יועצת</label>
    <type>Email</type>
</CustomField>