force-app/main/default/objects/Registration_Request__c/fields/Counselor_Name__c.field-meta.xml
<CustomField>
    <fullName>Counselor_Name__c</fullName>
    <label>יועצת</label>
    <type>Text</type>
    <length>100</length>
</CustomField>