force-app/main/default/objects/Registration_Request__c/fields/Criminal_Record_Details__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Record_Details__c</fullName>
    <label>פרטי עבר פלילי</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>