force-app/main/default/objects/Registration_Request__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>תאריך לידה</label>
    <type>Date</type>
</CustomField>