force-app/main/default/objects/Registration_Request__c/fields/Debts_Loans__c.field-meta.xml
<CustomField>
    <fullName>Debts_Loans__c</fullName>
    <label>Debts Loans</label>
    <type>Text</type>
    <length>255</length>
</CustomField>