force-app/main/default/objects/Registration_Request__c/fields/Economic_Details__c.field-meta.xml
<CustomField>
    <fullName>Economic_Details__c</fullName>
    <label>פירוט מצב כלכלי</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>