force-app/main/default/objects/Registration_Request__c/fields/Economic_Status__c.field-meta.xml
<CustomField>
    <fullName>Economic_Status__c</fullName>
    <label>מצב כלכלי</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <label>נמוך</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>בינוני</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>גבוה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>