force-app/main/default/objects/Registration_Request__c/fields/External_Motivators__c.field-meta.xml
<CustomField>
    <fullName>External_Motivators__c</fullName>
    <label>גורמים חיצוניים</label>
    <length>255</length>
    <type>Text</type>
</CustomField>