force-app/main/default/objects/Registration_Request__c/fields/Failing_Grades_Count__c.field-meta.xml
<CustomField>
    <fullName>Failing_Grades_Count__c</fullName>
    <label>Failing Grades Count</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>