force-app/main/default/objects/Registration_Request__c/fields/Failing_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Failing_Subjects__c</fullName>
    <label>תיאור המקצועות בהם יש שליליים</label>
    <type>Text</type>
    <length>255</length>
</CustomField>