force-app/main/default/objects/Registration_Request__c/fields/Failing_Subjects_Details__c.field-meta.xml
<CustomField>
    <fullName>Failing_Subjects_Details__c</fullName>
    <description>JSON array of failing subjects with subject name, grade, and reason</description>
    <label>Failing Subjects Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>