force-app/main/default/objects/Registration_Request__c/fields/Family_Background__c.field-meta.xml
<CustomField>
    <fullName>Family_Background__c</fullName>
    <label>Family Background</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>