force-app/main/default/objects/Registration_Request__c/fields/Father_Income__c.field-meta.xml
<CustomField>
    <fullName>Father_Income__c</fullName>
    <label>Father Income</label>
    <type>Text</type>
    <length>50</length>
</CustomField>