force-app/main/default/objects/Registration_Request__c/fields/Father_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Father_Mobile__c</fullName>
    <label>נייד האב</label>
    <type>Phone</type>
</CustomField>