force-app/main/default/objects/Registration_Request__c/fields/Father_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Father_Occupation__c</fullName>
    <label>עיסוק האב</label>
    <type>Text</type>
    <length>100</length>
</CustomField>