force-app/main/default/objects/Registration_Request__c/fields/Father_Profession__c.field-meta.xml
<CustomField>
    <fullName>Father_Profession__c</fullName>
    <label>Father Profession</label>
    <type>Text</type>
    <length>100</length>
</CustomField>