force-app/main/default/objects/Registration_Request__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>מין</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
                <label>זכר</label>
            </value>
            <value>
                <fullName>Female</fullName>
                <label>נקבה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>