force-app/main/default/objects/Registration_Request__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>כיתה</label>
    <length>20</length>
    <type>Text</type>
</CustomField>