force-app/main/default/objects/Registration_Request__c/fields/Grade_Sheet_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Grade_Sheet_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a grade sheet file has been uploaded for this registration request</description>
    <label>Grade Sheet Uploaded</label>
    <type>Checkbox</type>
</CustomField>