force-app/main/default/objects/Registration_Request__c/fields/Has_Potential__c.field-meta.xml
<CustomField>
    <fullName>Has_Potential__c</fullName>
    <label>פוטנציאל</label>
    <type>Text</type>
    <length>10</length>
</CustomField>