force-app/main/default/objects/Registration_Request__c/fields/Homeroom_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Homeroom_Teacher__c</fullName>
    <label>Homeroom Teacher</label>
    <type>Text</type>
    <length>100</length>
</CustomField>