force-app/main/default/objects/Registration_Request__c/fields/Immigration_Year__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Year__c</fullName>
    <label>Immigration Year</label>
    <type>Text</type>
    <length>4</length>
</CustomField>