force-app/main/default/objects/Registration_Request__c/fields/Known_to_Welfare__c.field-meta.xml
<CustomField>
    <fullName>Known_to_Welfare__c</fullName>
    <label>מוכרים ברווחה</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>