force-app/main/default/objects/Registration_Request__c/fields/Learning_Disability_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Learning_Disability_Explanation__c</fullName>
    <description>Explanation of the student&apos;s learning disability</description>
    <label>Learning Disability Explanation</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>