force-app/main/default/objects/Registration_Request__c/fields/Medication_Description__c.field-meta.xml
<CustomField>
    <fullName>Medication_Description__c</fullName>
    <label>Medication Description</label>
    <type>Text</type>
    <length>255</length>
</CustomField>