force-app/main/default/objects/Registration_Request__c/fields/Military_Service_Potential__c.field-meta.xml
<CustomField>
    <fullName>Military_Service_Potential__c</fullName>
    <label>Military Service Potential</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>