force-app/main/default/objects/Registration_Request__c/fields/Mother_Income__c.field-meta.xml
<CustomField>
    <fullName>Mother_Income__c</fullName>
    <label>Mother Income</label>
    <type>Text</type>
    <length>50</length>
</CustomField>