force-app/main/default/objects/Registration_Request__c/fields/Mother_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mother_Mobile__c</fullName>
    <label>נייד האם</label>
    <type>Phone</type>
</CustomField>