force-app/main/default/objects/Registration_Request__c/fields/Mother_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_Name__c</fullName>
    <label>Mother Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>