force-app/main/default/objects/Registration_Request__c/fields/Mother_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Mother_Occupation__c</fullName>
    <label>Mother Occupation</label>
    <type>Text</type>
    <length>100</length>
</CustomField>