force-app/main/default/objects/Registration_Request__c/fields/Mother_Profession__c.field-meta.xml
<CustomField>
    <fullName>Mother_Profession__c</fullName>
    <label>מקצוע האם</label>
    <type>Text</type>
    <length>100</length>
</CustomField>