force-app/main/default/objects/Registration_Request__c/fields/Motivation_Type__c.field-meta.xml
<CustomField>
    <fullName>Motivation_Type__c</fullName>
    <label>Motivation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>