force-app/main/default/objects/Registration_Request__c/fields/Parent1_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Address__c</fullName>
    <label>Parent 1 Address</label>
    <type>Text</type>
    <length>255</length>
</CustomField>