force-app/main/default/objects/Registration_Request__c/fields/Parent1_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent1_ID__c</fullName>
    <label>ת.ז. הורה 1</label>
    <type>Text</type>
    <length>20</length>
</CustomField>