force-app/main/default/objects/Registration_Request__c/fields/Parent1_Income__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Income__c</fullName>
    <label>הכנסת הורה1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>