force-app/main/default/objects/Registration_Request__c/fields/Parent1_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Name__c</fullName>
    <label>Parent 1 Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>