force-app/main/default/objects/Registration_Request__c/fields/Parent1_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Occupation__c</fullName>
    <label>עיסוק הורה1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>