force-app/main/default/objects/Registration_Request__c/fields/Parent1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Phone__c</fullName>
    <label>Parent 1 Phone</label>
    <type>Phone</type>
</CustomField>