force-app/main/default/objects/Registration_Request__c/fields/Parent1_Signature__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Signature__c</fullName>
    <label>Parent 1 Signature</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>