force-app/main/default/objects/Registration_Request__c/fields/Parent1_Signature_Display__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Signature_Display__c</fullName>
    <description>שדה טקסט עשיר להצגת חתימת הורה 1 כתמונה</description>
    <inlineHelpText>מציג את תמונת חתימת הורה 1</inlineHelpText>
    <label>תצוגת חתימת הורה 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>