force-app/main/default/objects/Registration_Request__c/fields/Parent2_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent2_Address__c</fullName>
    <label>כתובת הורה 2</label>
    <type>Text</type>
    <length>255</length>
</CustomField>