force-app/main/default/objects/Registration_Request__c/fields/Parent2_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent2_ID__c</fullName>
    <label>Parent 2 ID</label>
    <type>Text</type>
    <length>20</length>
</CustomField>