force-app/main/default/objects/Registration_Request__c/fields/Parent2_Income__c.field-meta.xml
<CustomField>
    <fullName>Parent2_Income__c</fullName>
    <label>הכנסת הורה2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>