force-app/main/default/objects/Registration_Request__c/fields/Parent2_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent2_Name__c</fullName>
    <label>שם הורה 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>