force-app/main/default/objects/Registration_Request__c/fields/Parent2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent2_Phone__c</fullName>
    <label>טלפון הורה 2</label>
    <type>Phone</type>
</CustomField>