force-app/main/default/objects/Registration_Request__c/fields/Parent2_Profession__c.field-meta.xml
<CustomField>
    <fullName>Parent2_Profession__c</fullName>
    <label>מקצוע הורה2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>