force-app/main/default/objects/Registration_Request__c/fields/Parent2_Signature__c.field-meta.xml
<CustomField>
    <fullName>Parent2_Signature__c</fullName>
    <label>חתימת הורה 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>