force-app/main/default/objects/Registration_Request__c/fields/Parent2_Signature_Display__c.field-meta.xml
<CustomField>
    <fullName>Parent2_Signature_Display__c</fullName>
    <description>שדה טקסט עשיר להצגת חתימת הורה 2 כתמונה</description>
    <inlineHelpText>מציג את תמונת חתימת הורה 2</inlineHelpText>
    <label>תצוגת חתימת הורה 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>