force-app/main/default/objects/Registration_Request__c/fields/Parent_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Involvement__c</fullName>
    <label>רמת מעורבות ההורים</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inhibiting</fullName>
                <label>מעכבת</label>
            </value>
            <value>
                <fullName>Promoting</fullName>
                <label>מקדמת</label>
            </value>
            <value>
                <fullName>No Involvement</fullName>
                <label>ללא מעורבות</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>