force-app/main/default/objects/Registration_Request__c/fields/Personal_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Personal_Opinion__c</fullName>
    <label>דעה אישית</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>