force-app/main/default/objects/Registration_Request__c/fields/Potential_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Potential_Explanation__c</fullName>
    <description>Explanation of student potential when identified</description>
    <label>Potential Explanation</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>