force-app/main/default/objects/Registration_Request__c/fields/Probation_Officer__c.field-meta.xml
<CustomField>
    <fullName>Probation_Officer__c</fullName>
    <label>קצין ביקור סדיר</label>
    <type>Text</type>
    <length>100</length>
</CustomField>