force-app/main/default/objects/Registration_Request__c/fields/Psychiatric_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Psychiatric_Treatment__c</fullName>
    <label>טיפול פסיכיאטרי</label>
    <type>Text</type>
    <length>10</length>
</CustomField>