force-app/main/default/objects/Registration_Request__c/fields/Psychological_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Psychological_Treatment__c</fullName>
    <label>טיפול פסיכולוגי</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>