force-app/main/default/objects/Registration_Request__c/fields/Referral_Number__c.field-meta.xml
<CustomField>
    <fullName>Referral_Number__c</fullName>
    <label>Referral Number</label>
    <type>Text</type>
    <length>50</length>
</CustomField>