force-app/main/default/objects/Registration_Request__c/fields/Rep_Position__c.field-meta.xml
<CustomField>
    <fullName>Rep_Position__c</fullName>
    <description>The position/role of the school representative (e.g., counselor, teacher, coordinator)</description>
    <inlineHelpText>תפקיד נציג בית הספר</inlineHelpText>
    <label>תפקיד נציג</label>
    <length>100</length>
    <type>Text</type>
</CustomField>