force-app/main/default/objects/Registration_Request__c/fields/Requires_Remedial_Teaching__c.field-meta.xml
<CustomField>
    <fullName>Requires_Remedial_Teaching__c</fullName>
    <label>Requires Remedial Teaching</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>