force-app/main/default/objects/Registration_Request__c/fields/Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factors__c</fullName>
    <label>גורמי סיכון</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>