force-app/main/default/objects/Registration_Request__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>רמת סיכון</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>