force-app/main/default/objects/Registration_Request__c/fields/School_Counselor_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Counselor_Name__c</fullName>
    <label>יועצת בית ספר</label>
    <type>Text</type>
    <length>100</length>
</CustomField>