force-app/main/default/objects/Registration_Request__c/fields/School_Counselor_Phone__c.field-meta.xml
<CustomField>
    <fullName>School_Counselor_Phone__c</fullName>
    <label>School Counselor Phone</label>
    <type>Phone</type>
</CustomField>