force-app/main/default/objects/Registration_Request__c/fields/School_Info_Password__c.field-meta.xml
<CustomField>
    <fullName>School_Info_Password__c</fullName>
    <description>Password for school information system access</description>
    <label>סיסמה למערכת ביה״ס</label>
    <length>100</length>
    <type>Text</type>
</CustomField>