force-app/main/default/objects/Registration_Request__c/fields/School_Info_Username__c.field-meta.xml
<CustomField>
    <fullName>School_Info_Username__c</fullName>
    <description>Username for school information system access</description>
    <label>School Info Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>