force-app/main/default/objects/Registration_Request__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <label>בית ספר</label>
    <length>200</length>
    <type>Text</type>
</CustomField>