force-app/main/default/objects/Registration_Request__c/fields/School_System_Password__c.field-meta.xml
<CustomField>
    <fullName>School_System_Password__c</fullName>
    <label>School System Password</label>
    <type>Text</type>
    <length>50</length>
</CustomField>