force-app/main/default/objects/Registration_Request__c/fields/Siblings_Count__c.field-meta.xml
<CustomField>
    <fullName>Siblings_Count__c</fullName>
    <label>מספר אחים</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>