force-app/main/default/objects/Registration_Request__c/fields/Smoking__c.field-meta.xml
<CustomField>
    <fullName>Smoking__c</fullName>
    <label>עישון</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>