force-app/main/default/objects/Registration_Request__c/fields/Social_Status__c.field-meta.xml
<CustomField>
    <fullName>Social_Status__c</fullName>
    <label>מצב חברתי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>