force-app/main/default/objects/Registration_Request__c/fields/Social_Worker_Name__c.field-meta.xml
<CustomField>
    <fullName>Social_Worker_Name__c</fullName>
    <label>Social Worker Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>