force-app/main/default/objects/Registration_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Consent</fullName>
                <label>ממתין להסכמה</label>
            </value>
            <value>
                <fullName>Consent Signed</fullName>
                <label>הסכמה נחתמה</label>
            </value>
            <value>
                <fullName>ויתור סודיות אצל הנציג</fullName>
            </value>
            <value>
                <fullName>Data Submitted</fullName>
                <label>נתונים הוגשו</label>
            </value>
            <value>
                <fullName>Pending Review</fullName>
                <label>ממתין לבדיקה</label>
            </value>
            <value>
                <fullName>In Review</fullName>
                <label>בבדיקה</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>אושר</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>נדחה</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>בתהליך מילוי טופס נתונים</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>