force-app/main/default/objects/Registration_Request__c/fields/Student_Address__c.field-meta.xml
<CustomField>
    <fullName>Student_Address__c</fullName>
    <label>Student Address</label>
    <type>Text</type>
    <length>255</length>
</CustomField>