force-app/main/default/objects/Registration_Request__c/fields/Student_Apartment__c.field-meta.xml
<CustomField>
    <fullName>Student_Apartment__c</fullName>
    <label>Student Apartment</label>
    <type>Text</type>
    <length>10</length>
</CustomField>