force-app/main/default/objects/Registration_Request__c/fields/Student_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_First_Name__c</fullName>
    <label>שם פרטי</label>
    <length>100</length>
    <type>Text</type>
</CustomField>