force-app/main/default/objects/Registration_Request__c/fields/Student_Floor__c.field-meta.xml
<CustomField>
    <fullName>Student_Floor__c</fullName>
    <label>Student Floor</label>
    <type>Text</type>
    <length>10</length>
</CustomField>