force-app/main/default/objects/Registration_Request__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <label>Student ID</label>
    <type>Text</type>
    <length>20</length>
</CustomField>