force-app/main/default/objects/Registration_Request__c/fields/Student_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Last_Name__c</fullName>
    <label>Student Last Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>