force-app/main/default/objects/Registration_Request__c/fields/Student_Phone__c.field-meta.xml
<CustomField>
    <fullName>Student_Phone__c</fullName>
    <label>טלפון</label>
    <type>Phone</type>
</CustomField>