force-app/main/default/objects/Registration_Request__c/fields/StudentData_submission_Time__c.field-meta.xml
<CustomField>
    <fullName>StudentData_submission_Time__c</fullName>
    <label>מועד הגשת הנתונים</label>
    <type>DateTime</type>
</CustomField>