force-app/main/default/objects/Registration_Request__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <label>תאריך הגשה</label>
    <type>DateTime</type>
</CustomField>