force-app/main/default/objects/Registration_Request__c/fields/Takes_Medication__c.field-meta.xml
<CustomField>
    <fullName>Takes_Medication__c</fullName>
    <label>נטילת תרופות</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
            <value>
                <fullName>לא ידוע</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>