force-app/main/default/objects/Registration_Request__c/fields/Warm_Home_Destination__c.field-meta.xml
<CustomField>
    <fullName>Warm_Home_Destination__c</fullName>
    <description>The warm home destination selected for the student</description>
    <label>Warm Home Destination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>בן יהודה</fullName>
            </value>
            <value>
                <fullName>כפר שלם</fullName>
            </value>
            <value>
                <fullName>נוה שרת</fullName>
            </value>
            <value>
                <fullName>בית פרידמן - ר״ג</fullName>
            </value>
            <value>
                <fullName>בית פרידמן - רעננה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>